--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -4,7 +4,7 @@ html{
 }
 /* Body */
 body {
-	font-family: source-sans-pro;
+	font-family: source-sans-pro, Tahoma, Verdana, sans-serif;
 	background-color: black;
 	margin-top: 0px;
 	margin-right: 0px;
@@ -72,10 +72,11 @@ stats ul li {
 	transition: all 0.3s linear;
 }
 
+
 /* Hero Section */
 section.hero{	
 	display: flex;
-	flex-flow: column wrap;
+	flex-flow: column;
 	justify-content: flex-end;
 	align-content: flex-end;
 	height: 100vh;
@@ -113,7 +114,7 @@ section.banner, section.banner2, section.narration{
     height: 80vh;
     color: #FFFFFF;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     justify-content: space-between;
     /*padding-top: 5vh;
     padding-left: 5vw;
@@ -123,6 +124,7 @@ section.banner, section.banner2, section.narration{
 	background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    transition: background-image 1s ease-in-out;
 }
 
 /* Icons */
@@ -132,7 +134,10 @@ section.banner, section.banner2, section.narration{
 img.mediumIcon {
 max-height: 20px;
 width:  auto;
+vertical-align: middle;
 }
+
+
 .Aldi {
 	position: relative;
 	left: 172px;
@@ -247,6 +252,9 @@ a {
 #map-description-container{
 	overflow: hidden;
 	padding: 0 0 0 2em;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
 }
 .route-image{
 	max-width: 20vw;
@@ -255,7 +263,7 @@ a {
 .continue-to-store{
 	text-align: center;
 }
-.continue-to-store button{
+button{
 	padding: 1em 2em;
 	color: white;
 	background-color: #59A5DB;
@@ -267,9 +275,17 @@ a {
 	display: inline-block;
 	cursor: pointer;
 }
-.continue-to-store button:hover {
-	border-color: #005A9C;
+button:hover {
+	background-color: #005A9C;
 }
+
+.selectedButton {
+	background-color: gray;
+}
+.selectedButton:hover {
+	background-color: #005A9C;
+}
+
 .Continue-Button {
 	height: 3em;
 }
@@ -300,4 +316,125 @@ a {
 
 #callVid{
 	height: 300px;
+}
+
+.subContainer {
+	height: 100%;
+	position: relative;
+	left: -100vw;
+}
+
+#shoppingspreeContainer {
+	position: relative;
+	height: 50%;
+	left: 100vw;
+	top: -100%;
+}
+.shoppingspree-subcontainer {
+	display: flex;
+	flex-flow: row;
+	width:  100%;
+	height: 70vh;
+}
+.shoppingspree-subcontainer div{
+	width: 200px;
+	flex:  1 1 auto;
+}
+.panel {
+	display:  flex;
+	flex-flow: column;
+	padding: 1em;
+}
+
+.panel img{
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+.aisleColumn{
+	display: flex;
+	flex-flow: column;
+	/*flex: 1 1 auto;*/
+	width: 50%;
+}
+
+.aisleItem{
+	padding: 0 1em;
+	border: thin solid gray;
+	display: none;
+	background-color: rgba(0, 0, 0, 0.75);
+	flex: 0 1 auto;
+}
+
+shoppingspreeIcons {
+	float:  left;
+	text-align: left;
+	margin-left: 25px;
+	height: 100%;
+	overflow-y: hidden;
+}
+shoppingspreeIcons ul {
+	list-style: none;
+	float: left;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+}
+shoppingspreeIcons ul li{
+	float: left;
+	margin-left: 25px;
+	letter-spacing: 2px;
+	font-weight: bold;
+	align-self: center;
+	border-radius: 20px;
+}
+shoppingspreeIcons img.mediumIcon{
+	max-height: 30px;
+	height: 6vh;
+	padding: 1em;
+}
+
+.shoppinglistContainer {
+	position: fixed;
+	z-index: 10;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: none;
+}
+
+.svgbutton {
+	cursor: pointer;
+	fill: rgba(0, 0, 0, 0);
+	stroke:#59a5db;
+	stroke-miterlimit:10;
+	stroke-width:2px;
+	opacity: 0;
+}
+.svgbutton:hover {
+	opacity: 1;
+}
+
+.checkoutprice{
+	text-align: right;
+	padding:  0 2em;
+	flex: 1 0 auto;
+}
+
+.checkoutlistcontainer{
+	margin: 1em 2em;
+	border:  thin solid gray;
+	padding: 1em;
+}
+
+.checkoutbutton{
+	margin: 0.5em;
+	padding: 0.2em 1em;
 }
