--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -166,6 +166,19 @@ vertical-align: middle;
 .dentist-blur{
 	background-image: url(../images/bg_dentist01_blur.png);
 }
+.intro-fridge{
+	background-image: url(../images/intro_fridge.png)
+}
+.intro-calc{
+	background-image: url(../images/intro_calc.png)
+}
+.intro-science{
+	background-image: url(../images/intro_science.png)
+}
+.intro-lobby{
+	background-image: url(../images/intro_lobby.png)
+}
+
 
 /* Other */
 .parallax {
