--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -236,6 +236,7 @@ a {
 	background-color: rgba(0,0,0,0.25);
 	padding: 10px;
 	border-bottom: thin solid rgba(0, 0, 0, 0.25);
+	overflow-x: auto;
 }
 .dentist-list-item h1{
 	margin: 0px;
