disclosures, stats, another video tweak
changed the display/language of the disclosures and logos, added a logo image, a deactivated stats image, and changed the name of the toothpaste icon to match its link

--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -244,6 +244,14 @@ a {
 	height: 10vh;
 	width: auto;
 }
+.logos {
+	height: 10vh;
+	width: auto;
+	background-image: url(../images/logos.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
 .dentist-list-item h1{
 	margin: 0px;
 }
