--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -13,6 +13,7 @@ body {
 	font-style: normal;
 	font-weight: 200;
 	color: #FFFFFF;
+	font-size: large;
 }
 /* Container */
 .container {
@@ -242,7 +243,7 @@ strong {
 	background-color: rgba(0,0,0,0.25);
 	padding: 10px;
 	border-bottom: thin solid rgba(0, 0, 0, 0.25);
-	overflow-x: auto;
+	/*overflow-x: auto;*/
 }
 #disclosures img{
 	height: 10vh;
