--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -46,7 +46,7 @@ header {
     width: 100%;
     height: 10%;
     background-color: #000000;
-    overflow-y: hidden;
+    overflow: hidden;
     position: fixed;
     top: 0px;
     z-index: 1;
